BaSP-W05-2022: Center header logo, fixed img of homepage, fixed align of shortcuts list on the end of the page

--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -28,11 +28,16 @@ header a {
 #logo-icon {
     width: 45px;
     height: 61px;
+    margin-right: 50px;
 }
 
 /* Breakpoint */
 @media screen and (min-width: 768px) {
     #burguer-icon {
         visibility: hidden;
+    }
+    #logo-icon {
+        margin-right: 0px;
+        margin-left: 230px;
     }
 }
